force-app/main/default/objects/Sharat_Sushma_Projects_c__x/Sharat_Sushma_Projects_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>My_another_DE_Org</externalDataSource>
    <externalName>Sharat_Sushma__Projects__c</externalName>
    <label>Projects</label>
    <pluralLabel>Projects</pluralLabel>
</CustomObject>