force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Projects Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>