force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Avg_SQF_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Avg_SQF_Rate_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Avg_SQF_Rate__c</externalDeveloperName>
    <label>Avg SQF Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>