force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Bank_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Bank_Address_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Bank_Address__c</externalDeveloperName>
    <label>Bank Address</label>
    <type>TextArea</type>
</CustomField>