force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Bank_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Bank_Name_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Bank_Name__c</externalDeveloperName>
    <label>Bank Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>