force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Built_Up_Area_SFT_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Built_Up_Area_SFT_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Built_Up_Area_SFT__c</externalDeveloperName>
    <label>Built Up Area(SFT)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>