force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Estimated_End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Estimated_End_Date_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Estimated_End_Date__c</externalDeveloperName>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>