force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Estimated_start_date_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Estimated_start_date_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Estimated_start_date__c</externalDeveloperName>
    <label>Estimated start date</label>
    <type>Date</type>
</CustomField>