force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Number_Of_Phases_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Number_Of_Phases_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Number_Of_Phases__c</externalDeveloperName>
    <label>Number Of Phases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>