force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Project_Approval_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Project_Approval_Status_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Project_Approval_Status__c</externalDeveloperName>
    <label>Project Approval Status</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>