force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Project_City_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Project_City_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Project_City__c</externalDeveloperName>
    <label>Project City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>