force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Project_Location_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Project_Location_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Project_Location__c</externalDeveloperName>
    <label>Project Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>