force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Sold_Unit_3_BHK_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Sold_Unit_3_BHK_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Sold_Unit_3_BHK__c</externalDeveloperName>
    <label>Sold Unit (3 BHK)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>