force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Total_Milestone_Payment_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Total_Milestone_Payment_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Total_Milestone_Payment__c</externalDeveloperName>
    <label>Total Milestone Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>