force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Total_No_Of_Car_Parks_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Total_No_Of_Car_Parks_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Total_No_Of_Car_Parks__c</externalDeveloperName>
    <label>Total No. Of Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>