force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Total_Number_Of_Sold_Flats__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Total_Number_Of_Sold_Flats__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Total_Number_Of_Sold_Flats__c</externalDeveloperName>
    <label>Total Number Of Sold Flats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>