force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Total_Sale_able_Area_SFT_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Total_Sale_able_Area_SFT_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Total_Sale_able_Area_SFT__c</externalDeveloperName>
    <label>Total Sale-able Area(SFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>