force-app/main/default/objects/Sharat_Sushma_Projects_c__x/fields/Sharat_Sushma_Total_Sold_Area_Sq_Ft_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Total_Sold_Area_Sq_Ft_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Total_Sold_Area_Sq_Ft__c</externalDeveloperName>
    <label>Total Sold Area(Sq.Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>